Update 数模电路基础知识 —— 7. PN结与二极管的工作原理.md
Fixed error in this article.

--- a/电子技术/电子与电路基础/数模电路基础知识 —— 7. PN结与二极管的工作原理.md
+++ b/电子技术/电子与电路基础/数模电路基础知识 —— 7. PN结与二极管的工作原理.md
@@ -38,21 +38,44 @@
 
 硅（Silicon）是14号元素，三层外电子壳结构，这导致它外层容易丢失电子的同时又具备极强的电子捕获能力（这也是为什么碳族元素具备最多电气化学特性的一类元素）。通常，如果纯硅作为介质，在其一端接上正极，另一端接上负极，它也具备一定的导电性。
 
-但是当往硅里掺入少量的磷（phosphor），由于它是15号元素，我们知道它具备比14号元素更强的电子捕获能力。
+但是当往硅里掺入一定量的磷（phosphor），由于它是15号元素，最外层有5个电子，所以会和4个电子的硅形成共价键，共享9个电子。
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/e02a59fb257044049fd34e0dc9d6d635.png#pic_center)
 
-而在其他硅里掺入比如硼（Boron），它是5号元素。可以知道它相对于硅来说很容易丢失外层3个电子。
+## 2.1. N结的定义
+这里由于多出了1个电子构成稳定结构，所以多出的这1个电子很容易在静电力的作用下丢失掉。而大量掺杂磷的硅，就会出现大量的自由电子，并在电场或静电力的作用下流出电子。而我们一般规定，电子“逃逸”的部分，标记为Negative，所以掺杂磷的硅构成了PN结中的N结。
+
+
+## 2.2. P结的定义
+
+而在其他硅里掺入比如硼（Boron），它是5号元素。它会与周边的硅原子构成共价键，共享7个电子。由于7个电子很容易在静电力的作用下从其他地方抢夺1个电子构成含8个电子的稳定结构，所以掺杂了一定的硼的硅，会在电场或静电力的影响下，成为“捕捉”电子的正极，记为Positive，也就是所谓的P结。
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/1a25a218edba459d93b79cb6da3a1bce.png#pic_center)
-当我们把这两个掺杂后的硅，紧密的结合在一起后，有趣的事就会发生。磷会从周围的硅抢夺电子，而失去电子的硅又会从相对更弱的硼那儿抢夺电子，等过一段时间，电子“不再流动”后，掺入磷的硅整体呈现**负电性**。
 
-而掺入了硼的一端，则因为丢失了电子，整体呈现**正电性**。呈现负电性的部分，就是 **N型半导体（N for negative，N-dopped silicon）**，而呈现正电性的部分，就是 **P型半导体 (P for positive, P-dopped silicon)**。
+所以，当我们把P结（P-doping Silicon）和N结（N-doping Silicon）结合在一块，在静电力的作用下，N结中的电子会向P结移动。经过一段时间后，PN两端的都会达到一个平衡状态，从而具备单向导电性。
 
-自然，当两块半导体连在一起时，自然就具备了电流单向流动的特性。其中一种构成了我们能想到的应用，也就是 —— 二极管（Diode）
+怎么理解？
+
+# 3. PN结与单向导电性
+# 3.1. 正向偏置
+
+说到单向导电性，我们来看看一个关于PN结最常见的应用，也就是 —— 二极管（Diode）
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/5fc32161223446d39dca9e2963d404dd.png#pic_center)
-如果把电源比作水泵，整个电路构成一个回路进行看待，那么我们需要从PN型半导体的N极，把多余电子 **“抽出来”**，再把P极缺失的电子 **“补回去”**，而PN半导体自身由于内部电场的静电力，又会自发的把P极的电子抽到N极去，这就形成了电流，而相反的方向则不会。
+前面已经说过，由PN结构成的二极管，在静电力作用下，N结的自由电子会流向P结。这个流向过程完成时间极短，并且在完成之后具备单向导电性。这是因为假设我们N结（+电荷）与电源正极连接，由于外层已经是8个电子的稳定态，所以不会有电子从这个结构中逃逸，跑到电源的正极；二极管的P级如果与电源的负极连接，由于P级已经是稳定的8电子结构，所以不会吸收新的电子，所以也不会发生电子的移动。
 
-但是正如我之前提到过，如果施加足够大的外力是可以改变很多物质的电气特性，如果我们在相反的方向施加足够大的电压，也能改变PN半导体的导电方向。但是正如这样做等价于对高阻抗物体施加大电压，根据热力学公式可以知道这样会导致瞬间产生极高的温度，所以半导体也会损坏，在表象上就是嘣的一声炸了，或者起火燃烧。
+但是反过来就不一样了，当N级与电源负极相连，P级与电源正极相连。P级的电荷会由于电源的影响而丢失，并流向电源；而N级的则会从电源的负极，源源不断的获得电子，于是回路形成，电路导通。
 
-所以没事别乱整。
+![在这里插入图片描述](https://img-blog.csdnimg.cn/9a923c6c3e4c4cdf91048ca963c42b75.png#pic_center)
+在电路上元器件按照正常的电路连接方式连接起来，导通后形成的电流称为**正向偏置电流**。
+
+# 3.1. 反向偏置与热击穿、齐纳击穿
+
+尽管逻辑上，PN结的这种结构理论上不应该出现反向电流的问题，也就是把二极管与电源反接依然能导通的情况。但是奈何现实世界永远有大力出奇迹这种说法。
+
+但是正如我之前提到过，**如果施加足够大的外力，可以改变很多物质的电气特性**。如果我们在相反的方向施加足够大的电压，也能改变PN半导体的导电方向。
+
+但对于PN结为主的二极管来说，它反向具备极高的阻抗，所以当我们试图也让它反向导通时，也就意味我们需要施加足够的电压，或者增加外部环境温度（大多数的材料会在高温其阻抗变低）。也就是在热力学影响下，构成外层的电子会因为热量获得更大动能从而逃脱静电力的束缚，变成自由电子。
+
+这时，大多数器件在反接的时候也能构成回路，形成的电流称为 **反向偏置电流**。但是根据热力学相关定理可以知道这样会导致半导体元器件的损坏，也就是内热过高出现烧毁的情况（即热击穿，或又称为雪崩击穿）。
+
+所以，一些物理学家换了其他工艺，设计出了在一定电压后可以像水闸一样释放电子的 **齐纳二极管**，此时的击穿一般是短暂击穿（即齐纳击穿），并不会破坏二极管的物理结构。但是要知道，这样的二极管如果超过了一定的限度，依然还是会损毁掉。
