Update 数模电路基础知识 —— 7. PN结与二极管的工作原理.md
I fixed some errors in this article.

--- a/电子技术/电子与电路基础/数模电路基础知识 —— 7. PN结与二极管的工作原理.md
+++ b/电子技术/电子与电路基础/数模电路基础知识 —— 7. PN结与二极管的工作原理.md
@@ -34,41 +34,40 @@
 
 # 2. 什么是PN节（PN Sides）与半导体掺杂工艺（doping）
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/6202b39f9cef44ea9ba9315a47e7c85c.png#pic_center)
+## 2.1. N型半导体的定义
+我们知道 **硅（Silicon, #14）**，最外层电子有四个，当往硅里掺入一定量的 **磷（Phosphor, #15）**，磷和周边的硅就会形成共价键，在最外层共享9个电子。由于原子核外层电子数最多8个，所以就会多出了1个电子，而这个电子很容易变成自由电子。
 
-硅（Silicon）是14号元素，三层外电子壳结构，这导致它外层容易丢失电子的同时又具备极强的电子捕获能力（这也是为什么碳族元素具备最多电气化学特性的一类元素）。通常，如果纯硅作为介质，在其一端接上正极，另一端接上负极，它也具备一定的导电性。
+![在这里插入图片描述](https://img-blog.csdnimg.cn/607e889c94614a48ae0b2d88aae94c04.jpeg#pic_center)
+我们定义，提供自由电子的一端为阴极，所以掺杂了磷的硅晶体就成为了 **Negative-type Silicon**，对应的中文翻译为 **N型半导体**。
 
-但是当往硅里掺入一定量的磷（phosphor），由于它是15号元素，最外层有5个电子，所以会和4个电子的硅形成共价键，共享9个电子。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/e02a59fb257044049fd34e0dc9d6d635.png#pic_center)
+## 2.2. P型半导体的定义
 
-## 2.1. N结的定义
-这里由于多出了1个电子构成稳定结构，所以多出的这1个电子很容易在静电力的作用下丢失掉。而大量掺杂磷的硅，就会出现大量的自由电子，并在电场或静电力的作用下流出电子。而我们一般规定，电子“逃逸”的部分，标记为Negative，所以掺杂磷的硅构成了PN结中的N结。
+而掺入比如**硼（Boron，#5）**。硼与周边的硅原子同样构成共价键，但是只共享7个电子。由于7个电子很容易在静电力的作用下从其他地方抢夺1个电子构成含8个电子的稳定结构，所以吸引电子的的硅晶体，就称为 **Positive-type Silicon**，其对应的翻译就是 **P型半导体**。
 
+![在这里插入图片描述](https://img-blog.csdnimg.cn/3e15574c61c04ed99969e29ce205223a.jpeg#pic_center)
+## 2.3. PN结（PN-Conjunction）
+当我们把P型和N型半导体结合在一起后，在不通电或施加外部电磁场的情况下，P型和N型半导体就会由于自身的静电力作用下，P型从N型半导体中吸附一部分（或全部）自由电子，并形成某种 “阻塞” 的情况。
 
-## 2.2. P结的定义
+![在这里插入图片描述](https://img-blog.csdnimg.cn/a7bea8cddbcc483f84834f48428bc638.png#pic_center)
+这种阻塞会产生很大的等效阻抗，所以使得PN结具备了单向导通性，即外部电子由N型流入元器件，然后再由P型流出；或者电流由P型流入，再由N型流出。这种PN型半导体结合在一起构成基本元器件的物理结构，就称为一个 **PN-Conjunction**，对应中文就是PN结。
 
-而在其他硅里掺入比如硼（Boron），它是5号元素。它会与周边的硅原子构成共价键，共享7个电子。由于7个电子很容易在静电力的作用下从其他地方抢夺1个电子构成含8个电子的稳定结构，所以掺杂了一定的硼的硅，会在电场或静电力的影响下，成为“捕捉”电子的正极，记为Positive，也就是所谓的P结。
+而PN接触的部分，由于静电力作用而导致自由电子从N型被吸附到了P型半导体的 **电子穴（Electron Hole）**，被填塞的，并导致电势翻转的部分被称为耗散区（depletion region or depletion space）。
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/1a25a218edba459d93b79cb6da3a1bce.png#pic_center)
-
-所以，当我们把P结（P-doping Silicon）和N结（N-doping Silicon）结合在一块，在静电力的作用下，N结中的电子会向P结移动。经过一段时间后，PN两端的都会达到一个平衡状态，从而具备单向导电性。
-
-怎么理解？
 
 # 3. PN结与单向导电性
-# 3.1. 正向偏置
+## 3.1. 正向偏置
 
 说到单向导电性，我们来看看一个关于PN结最常见的应用，也就是 —— 二极管（Diode）
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/5fc32161223446d39dca9e2963d404dd.png#pic_center)
 前面已经说过，由PN结构成的二极管，在静电力作用下，N结的自由电子会流向P结。这个流向过程完成时间极短，并且在完成之后具备单向导电性。这是因为假设我们N结（+电荷）与电源正极连接，由于外层已经是8个电子的稳定态，所以不会有电子从这个结构中逃逸，跑到电源的正极；二极管的P级如果与电源的负极连接，由于P级已经是稳定的8电子结构，所以不会吸收新的电子，所以也不会发生电子的移动。
 
-但是反过来就不一样了，当N级与电源负极相连，P级与电源正极相连。P级的电荷会由于电源的影响而丢失，并流向电源；而N级的则会从电源的负极，源源不断的获得电子，于是回路形成，电路导通。
+但是反过来就不一样了，当N级与电源负极相连，P级与电源正极相连。P级的电荷会由于电源正极处于较高的电势位，自由电子丢失并流向电源；而N级的则会从电源的负极补充电子，于是回路形成，电路导通。
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/9a923c6c3e4c4cdf91048ca963c42b75.png#pic_center)
 在电路上元器件按照正常的电路连接方式连接起来，导通后形成的电流称为**正向偏置电流**。
 
-# 3.1. 反向偏置与热击穿、齐纳击穿
+## 3.1. 反向偏置与热击穿、齐纳击穿
 
 尽管逻辑上，PN结的这种结构理论上不应该出现反向电流的问题，也就是把二极管与电源反接依然能导通的情况。但是奈何现实世界永远有大力出奇迹这种说法。
 
