Update 信号采样基本概念 —— 6. 卡尔曼滤波（Kalman Filtering）.md
I have fixed some little inaccuracies.

--- a/信号与采样/信号采样基本概念 —— 6. 卡尔曼滤波（Kalman Filtering）.md
+++ b/信号与采样/信号采样基本概念 —— 6. 卡尔曼滤波（Kalman Filtering）.md
@@ -264,7 +264,7 @@ $$
 
 首先我们假设我们已经对全部参数进行了假设，并已经获得了初始条件 $x_0$。
 
-**测试阶段**
+**预测阶段**
 
 现在我们要开始进行对 $x_1$ 状态进行预测。由于该系统只包含了速度$v$和位置$p$，所以对于状态$x_0$就有了
 
@@ -281,7 +281,7 @@ $$
 
 注意此刻的 $\hat x_1^-$ 以及$P_1^-$ 都只是估测值。
 
-**更新**
+**更新阶段**
 
 然后计算`卡尔曼增益` $K = \frac{P' \cdot H^T}{H \cdot P' \cdot H^T + R}$
 
