--- a/信号与采样/信号采样基本概念 —— 7.数模转换（DAC & ADC）.md
+++ b/信号与采样/信号采样基本概念 —— 7.数模转换（DAC & ADC）.md
@@ -1,3 +1,8 @@
+- [数字转模拟（DAC）](#数字转模拟dac)
+  - [一个简单的数字转模拟方案](#一个简单的数字转模拟方案)
+- [模拟转数字（ADC）](#模拟转数字adc)
+
+
 #  数字转模拟（DAC）
 
 通常来说，我们在设备上存储的数据是以二进制进行传输的，但是当我们试图将数据传输到更远的地方时，或者通过一些其他介质，例如WI-FI、蓝牙，同轴电缆、或者其他无线电信号进行远距离传输的时候，我们就需要把数据转化为模拟信号进行传输。
@@ -8,10 +13,10 @@
 
 数模转换最常见的方案是通过数模转换芯片来完成信号的转换。比方说德仪的PCM1808就是这样一款数模转换芯片。
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/e4aec9d5a645409d867dac034de6fc90.png#pic_center)
+![在这里插入图片描述](./res/PCM1808.png#pic_center)
 通过6，7，8，9引脚分别输入数字信号和时钟输入，就可以在13和14引脚得到其对应的模拟信号。一般来说，其实现数模转换通过类似电压串联来实现。就像下面这样的示例
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/d0094697cc8b4acd8aaa986167feb39f.jpeg#pic_center)
+![在这里插入图片描述](./res/dac説明.jpg#pic_center)
 
 所以，我们可以根据这样的原理，写出它对应的数学表达式，例如对于4位的DAC，就可以表示如下：
 
